src/test/compile-fail/bad-send.rs
// xfail-boot
// xfail-stage0
// error-pattern: mismatched types

fn main() {
  10 <| 10;
}